--- a/src/styles/DocumentViewer.scss
+++ b/src/styles/DocumentViewer.scss
@@ -1181,3 +1181,10 @@ ul {
 ;
   justify-content: space-between;
 }
+.over-lay-content {
+  position: absolute;
+  pointer-events: none;
+  z-index: 9999;
+  background: rgba(255, 255, 0, 0.1);
+  border: 1px dashed #ffeb3b;
+}
